WebCore: 2009-02-21  Hironori Bono  <hbono@chromium.org>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23786
        [Chromium] line-break characters in a complex text are treated as zero-width spaces

        This change prevents the UniscribeHelper class from treating the line-break characters
        as whitespaces.

        * platform/graphics/chromium/UniscribeHelper.cpp:
        (WebCore::UniscribeHelper::adjustSpaceAdvances):
        Make the UniscribeHelper::adjustSpaceAdvances() function treat all characters in
        the treatAsSpace() function (e.g. U+0020, U+000A, U+000D, U+00A0) as whitespaces,
        so does when Chromium renders a simple text.

LayoutTests:
2009-02-21  Hironori Bono  <hbono@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23786
        [Chromium] line-break characters in a complex text are treated as zero-width spaces

        Added tests which verifies line-break characters in a complex text are treated as defined in CSS 2.1.

        * fast/text/international/bidi-linebreak-001.html: Added.
        * fast/text/international/bidi-linebreak-002.html: Added.
        * fast/text/international/bidi-linebreak-003.html: Added.
        * platform/mac/fast/text/international/bidi-linebreak-001-expected.checksum: Added.
        * platform/mac/fast/text/international/bidi-linebreak-001-expected.png: Added.
        * platform/mac/fast/text/international/bidi-linebreak-001-expected.txt: Added.
        * platform/mac/fast/text/international/bidi-linebreak-002-expected.checksum: Added.
        * platform/mac/fast/text/international/bidi-linebreak-002-expected.png: Added.
        * platform/mac/fast/text/international/bidi-linebreak-002-expected.txt: Added.
        * platform/mac/fast/text/international/bidi-linebreak-003-expected.checksum: Added.
        * platform/mac/fast/text/international/bidi-linebreak-003-expected.png: Added.
        * platform/mac/fast/text/international/bidi-linebreak-003-expected.txt: Added.



Canonical link: https://commits.webkit.org/33204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41122 268f45cc-cd09-0410-ab3c-d52691b4dbfc